# bevy_c3d

./: CODE_OF_CONDUCT.md  Cargo.toml  README.md
assets/: walk.c3d
examples/: basic.rs
src/: c3d_loader.rs  lib.rs
