[package]
name = "bevy_c3d"
version = "0.11.0"
authors = ["Claire V. Hammond <claire@biomech.dev>"]
edition = "2021"
description = "A plugin for loading C3D files into Bevy"
readme = "README.md"
license = "MIT OR Apache-2.0"
homepage = "https://biomech.dev/bevy_c3d"
repository = "https://github.com/cvhammond/bevy_c3d"
keywords = ["bevy", "c3d", "motion capture", "bevy-plugin", "biomechanics"]
categories = ["game-development", "data-structures", "graphics", "mathematics", "science"]
exclude = ["tests", "tests/*", "examples", "examples/*", "assets", "assets/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11"
c3dio = "0.1"

[[example]]
name = "basic"
path = "examples/basic.rs"

