[package]
name = "bevy_c3d"
version = "0.13.0"
authors = ["Claire V. Hammond <me@cvhammond.com>"]
edition = "2021"
description = "A plugin for loading C3D motion capture files into Bevy"
readme = "README.md"
license = "MIT OR Apache-2.0"
homepage = "https://chiron.rs/bevy_c3d"
repository = "https://github.com/biomechanics-foundation/bevy_c3d"
keywords = ["bevy", "c3d", "motion-capture", "bevy-plugin", "biomechanics"]
categories = ["game-development", "multimedia::encoding", "graphics", "rendering::data-formats", "science::robotics"]
exclude = ["tests", "tests/*", "examples", "examples/*", "assets", "assets/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_app = "0.13"
bevy_asset = "0.13"
bevy_render = "0.13"
bevy_reflect = "0.13"
bevy_utils = "0.13"
bevy_ecs = "0.13"
bevy_scene = { version = "0.13", optional = true}
bevy_pbr = { version = "0.13", optional = true}
c3dio = "0.7.0"

[dev-dependencies]
bevy = "0.13"

[[example]]
name = "basic"
path = "examples/basic.rs"

